fix(front): persistent colours on dark mode

--- a/src/pages/Schedule/Schedule.scss
+++ b/src/pages/Schedule/Schedule.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 8px;
+  color: theme('colors.textlight') !important;
   
   &.mainEvent {
     background-color: #bfdbfe;
